--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
-$primary-color:#ffd700;
 
+
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
 @import 'animate.css';
 
 @font-face{
