Finished home page

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   font-family: 'Silkscreen', cursive;
   color: #444;
-  background: #474d51;
+  background: #303234;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
