--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -9,6 +9,7 @@
     bottom: auto;
 }
 
+
 .tags{
     color: hsl(202, 98%, 66%);
     opacity: 1;
@@ -18,6 +19,10 @@
     font-size: 18px;
 }
 
+.bottom-tags{
+    bottom: 35px;
+    top: auto;
+}
 .container{
     width: 100%;
     will-change: contents;
