--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
 @import 'animate.css';
+@import'~loaders.css/src/animations/pacman.scss';
 
 @font-face{
   font-family:'Helvetica Neue';
@@ -19,4 +20,18 @@
 input,
 textarea{
   font-family: 'Helvetica Neue';
+}
+
+.loader-active{
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  animation: fadeOut 1s 1s;
+  animation-fill-mode: forwards;
 }
